# rules_proto

./: .travis.yml  CONTRIBUTING.md  README.md  WORKSPACE
.bazelci/: presubmit.yml
proto/: BUILD.bazel  defs.bzl  proto_common.bzl  proto_library.bzl  proto_toolchain.bzl  repositories.bzl  workspace.bzl
proto/private/: BUILD.bazel  dependencies.bzl  descriptor_set_path_seperator.bzl  labels.bzl
proto/private/rules/: starlark_proto_library.bzl
proto/tests/: BUILD.bazel  add_prefix.proto  import_all.proto
proto/tests/compile/: BUILD.bazel  proto_compile.bzl
proto/tests/dir/: BUILD.bazel  add_and_strip_empty_prefix.proto  proto_source_root_without_dir.proto  strip_empty_prefix_without_dir.proto
proto/tests/dir/add_and_strip_prefix/: add_and_strip_prefix_import.proto
proto/tests/dir/add_and_strip_prefix/dir/: add_and_strip_prefix_subdir.proto
proto/tests/dir/proto_source_root/: proto_source_root.proto  proto_source_root_import.proto  proto_source_root_import_full.proto
proto/tests/dir/strip_prefix/: strip_empty_prefix.proto  strip_prefix.proto  strip_prefix_import.proto
src/cc/: README.md
src/cc/check_deps/: BUILD.bazel
src/cc/protoc/: BUILD.bazel  main.cc
tests/: BUILD.bazel  add_prefix_with_dir.proto  import_all.proto  no_prefix.proto
tests/compile/: BUILD.bazel  README.md  proto_compile.bzl
tests/dir/: BUILD.bazel
tests/dir/add_and_strip_prefix/: add_and_strip_empty_subdir_prefix.proto  add_and_strip_prefix.proto  add_and_strip_prefix_import.proto
tests/dir/strip_prefix/: strip_prefix_import.proto
tests/dir/strip_prefix/dir/: strip_prefix_with_dir.proto
tests/no_prefix_with_dir/: no_prefix_with_dir.proto
tests/workspace/: BUILD.bazel  WORKSPACE  add_prefix.proto  add_prefix_with_dir.proto  import_all.proto  no_prefix.proto
tests/workspace/dir/: BUILD.bazel  add_and_strip_empty_prefix.proto  strip_empty_prefix_without_dir.proto
tests/workspace/dir/add_and_strip_prefix/: add_and_strip_empty_subdir_prefix.proto  add_and_strip_prefix.proto  add_and_strip_prefix_import.proto
tests/workspace/dir/add_and_strip_prefix/dir/: add_and_strip_prefix_subdir.proto
tests/workspace/dir/strip_prefix/: strip_empty_prefix.proto  strip_prefix.proto  strip_prefix_import.proto
tests/workspace/dir/strip_prefix/dir/: strip_prefix_with_dir.proto
tests/workspace/no_prefix_with_dir/: no_prefix_with_dir.proto
