## Copyright 2019 The Rules Protobuf Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2

load("//proto:proto_toolchain.bzl", "proto_toolchain")
load("//proto/private:labels.bzl", "TOOLCHAIN_TYPE")

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

proto_toolchain(
    name = "default_toolchain_impl",
    protoc = "@com_google_protobuf//:protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default_toolchain",
    toolchain = ":default_toolchain_impl",
    toolchain_type = TOOLCHAIN_TYPE,
)
