## Copyright 2019 The Rules Protobuf Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2

load("//proto/private:descriptor_set_path_seperator.bzl", "descriptor_set_path_seperator")

config_setting(
    name = "windows",
    constraint_values = [
        "@bazel_tools//platforms:windows",
    ],
)

descriptor_set_path_seperator(
    name = "windows_descriptor_set_path_seperator",
    path_seperator = ";",
)

descriptor_set_path_seperator(
    name = "default_descriptor_set_path_seperator",
    path_seperator = ":",
)

# Path seperator must be ';' on Windows and ':' otherwise.
#
# https://github.com/protocolbuffers/protobuf/blob/61301f01552dd84d744a05c88af95833c600a1a7/src/google/protobuf/compiler/command_line_interface.cc#L778
descriptor_set_path_seperator(
    name = "descriptor_set_path_seperator",
    propagate_path_seperator = select({
        ":windows": ":windows_descriptor_set_path_seperator",
        "//conditions:default": ":default_descriptor_set_path_seperator",
    }),
    visibility = ["//visibility:public"],
)
