## Copyright 2019 The Rules Protobuf Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2

load("@//proto/private/rules:starlark_proto_library.bzl", "starlark_proto_library")

proto_library(
    name = "add_and_strip_empty_prefix_proto",
    srcs = [
        "add_and_strip_empty_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "add_and_strip_empty_prefix_starlark_proto",
    srcs = [
        "add_and_strip_empty_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "add_and_strip_empty_subdir_prefix_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_empty_subdir_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "add_and_strip_empty_subdir_prefix_starlark_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_empty_subdir_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "add_and_strip_prefix_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "add_and_strip_prefix_starlark_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_prefix.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "add_and_strip_prefix_import_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_prefix_import.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//tests:add_prefix_proto",
        "//tests:add_prefix_with_dir_proto",
        "//tests:no_prefix_proto",
        "//tests/dir:add_and_strip_empty_prefix_proto",
        "//tests/dir:add_and_strip_empty_subdir_prefix_proto",
        "//tests/dir:add_and_strip_prefix_proto",
        "//tests/dir:add_and_strip_prefix_subdir_proto",
        "//tests/dir:strip_empty_prefix_proto",
        "//tests/dir:strip_empty_prefix_without_dir_proto",
        "//tests/dir:strip_prefix_proto",
        "//tests/dir:strip_prefix_with_dir_proto",
    ],
)

starlark_proto_library(
    name = "add_and_strip_prefix_import_starlark_proto",
    srcs = [
        "add_and_strip_prefix/add_and_strip_prefix_import.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//tests:add_prefix_starlark_proto",
        "//tests:add_prefix_with_dir_starlark_proto",
        "//tests:no_prefix_starlark_proto",
        "//tests/dir:add_and_strip_empty_prefix_starlark_proto",
        "//tests/dir:add_and_strip_empty_subdir_prefix_starlark_proto",
        "//tests/dir:add_and_strip_prefix_starlark_proto",
        "//tests/dir:add_and_strip_prefix_subdir_starlark_proto",
        "//tests/dir:strip_empty_prefix_starlark_proto",
        "//tests/dir:strip_empty_prefix_without_dir_starlark_proto",
        "//tests/dir:strip_prefix_starlark_proto",
        "//tests/dir:strip_prefix_with_dir_starlark_proto",
    ],
)

proto_library(
    name = "add_and_strip_prefix_subdir_proto",
    srcs = [
        "add_and_strip_prefix/dir/add_and_strip_prefix_subdir.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "add_and_strip_prefix_subdir_starlark_proto",
    srcs = [
        "add_and_strip_prefix/dir/add_and_strip_prefix_subdir.proto",
    ],
    import_prefix = "import_prefix",
    strip_import_prefix = "add_and_strip_prefix",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "strip_empty_prefix_proto",
    srcs = [
        "strip_prefix/strip_empty_prefix.proto",
    ],
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "strip_empty_prefix_starlark_proto",
    srcs = [
        "strip_prefix/strip_empty_prefix.proto",
    ],
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "strip_empty_prefix_without_dir_proto",
    srcs = [
        "strip_empty_prefix_without_dir.proto",
    ],
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "strip_empty_prefix_without_dir_starlark_proto",
    srcs = [
        "strip_empty_prefix_without_dir.proto",
    ],
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "strip_prefix_proto",
    srcs = [
        "strip_prefix/strip_prefix.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "strip_prefix_starlark_proto",
    srcs = [
        "strip_prefix/strip_prefix.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "strip_prefix_import_proto",
    srcs = [
        "strip_prefix/strip_prefix_import.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//tests:add_prefix_proto",
        "//tests:add_prefix_with_dir_proto",
        "//tests:no_prefix_proto",
        "//tests/dir:add_and_strip_empty_prefix_proto",
        "//tests/dir:add_and_strip_empty_subdir_prefix_proto",
        "//tests/dir:add_and_strip_prefix_proto",
        "//tests/dir:add_and_strip_prefix_subdir_proto",
        "//tests/dir:strip_empty_prefix_proto",
        "//tests/dir:strip_empty_prefix_without_dir_proto",
        "//tests/dir:strip_prefix_proto",
        "//tests/dir:strip_prefix_with_dir_proto",
    ],
)

starlark_proto_library(
    name = "strip_prefix_import_starlark_proto",
    srcs = [
        "strip_prefix/strip_prefix_import.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
    deps = [
        "//tests:add_prefix_starlark_proto",
        "//tests:add_prefix_with_dir_starlark_proto",
        "//tests:no_prefix_starlark_proto",
        "//tests/dir:add_and_strip_empty_prefix_starlark_proto",
        "//tests/dir:add_and_strip_empty_subdir_prefix_starlark_proto",
        "//tests/dir:add_and_strip_prefix_starlark_proto",
        "//tests/dir:add_and_strip_prefix_subdir_starlark_proto",
        "//tests/dir:strip_empty_prefix_starlark_proto",
        "//tests/dir:strip_empty_prefix_without_dir_starlark_proto",
        "//tests/dir:strip_prefix_starlark_proto",
        "//tests/dir:strip_prefix_with_dir_starlark_proto",
    ],
)

proto_library(
    name = "strip_prefix_with_dir_proto",
    srcs = [
        "strip_prefix/dir/strip_prefix_with_dir.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
)

starlark_proto_library(
    name = "strip_prefix_with_dir_starlark_proto",
    srcs = [
        "strip_prefix/dir/strip_prefix_with_dir.proto",
    ],
    strip_import_prefix = "strip_prefix",
    visibility = ["//visibility:public"],
)
