## Copyright 2019 The Rules Protobuf Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2

load("//proto/tests/compile:proto_compile.bzl", "proto_compile")

proto_compile(
    name = "import_all_proto_compile",
    deps = [
        "//proto/tests:import_all_proto",
    ],
)

proto_compile(
    name = "no_srcs_proto_compile",
    deps = [
        "//proto/tests:no_srcs_proto",
    ],
)

proto_compile(
    name = "no_srcs_deps_proto_compile",
    deps = [
        "//proto/tests:no_srcs_deps_proto",
    ],
)

proto_compile(
    name = "no_srcs_deps_no_srcs_proto_compile",
    deps = [
        "//proto/tests:no_srcs_deps_no_srcs_proto",
    ],
)

java_proto_library(
    name = "proto_source_root_import_full_java_proto",
    tags = [
        # Fails because imports are not cannonical.
        "manual",
    ],
    deps = [
        "//proto/tests/dir:proto_source_root_import_full_proto",
    ],
)
